logs/httpdrun.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/httpdrun'...
Compiling './lib/python3.5/site-packages/httpdrun/__init__.py'...
***   File "./lib/python3.5/site-packages/httpdrun/__init__.py", line 19
    except AttributeError, a:
                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/httpdrun/win'...
Compiling './lib/python3.5/site-packages/httpdrun/win/__init__.py'...
***   File "./lib/python3.5/site-packages/httpdrun/win/__init__.py", line 39
    raise Exception, 'service "%s" is already registered' % service_name
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/httpdrun/win/services.py'...
***   File "./lib/python3.5/site-packages/httpdrun/win/services.py", line 251
    raise ServiceDoesNotExist, 'service "%s" does not exist' % name
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/httpdrun/yaptu.py'...
***   File "./lib/python3.5/site-packages/httpdrun/yaptu.py", line 57
    exec stat in self.globals,self.locals
            ^
SyntaxError: Missing parentheses in call to 'exec'

Listing './lib/python3.5/site-packages/httpdrun-0.1.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
